--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.3.10",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.24",
     "@types/passport-local": "^1.0.33",
     "@types/passport-local-mongoose": "^4.0.12",
@@ -38,6 +39,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
