--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
     "ts-node": "^8.0.2",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "ytdl-core": "^0.29.1"
   },
   "devDependencies": {}
 }
