--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "apn": "^2.2.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "eslint": "^5.13.0",
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
