--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^5.13.0",
     "eslint-plugin-import": "^2.16.0",
     "express": "^4.16.4",
+    "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
